// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the Bolt Twig Renderer API renders attributes on the button component correctly 1`] = `
<button class="u-bolt-margin-bottom-large e-bolt-button"
        type="button"
>
  Hello world!
</button>
`;

exports[`Test the Bolt Twig Renderer API renders the button component correctly 1`] = `
<button type="button"
        class="e-bolt-button"
>
  Hello world!2
</button>
`;

exports[`Test the Bolt Twig Renderer API renders the secondary button correctly 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--secondary"
>
  Secondary Button!
</button>
`;
